# ARK---Advanced-Rocketry-Kernel-

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Config.hpp  LICENSE  README.md  pico_sdk_import.cmake
ARK/: Ark.cpp  Ark.hpp  CoreTypes.hpp  SimpleHelpers.hpp  sources.cmake
ARK/Arch/Esp32/: CMakeLists.txt  Entry.cpp  PinMap.hpp
ARK/Arch/Esp32/Hal/Adc/: Adc.hpp
ARK/Arch/Esp32/Hal/Clock/: Clock.cpp  Clock.hpp
ARK/Arch/Esp32/Hal/Console/: Console.cpp  Console.hpp
ARK/Arch/Esp32/Hal/Flash/: Flash.cpp  Flash.hpp
ARK/Arch/Esp32/Hal/Gpio/: Gpio.hpp
ARK/Arch/Esp32/Hal/I2c/: I2c.hpp
ARK/Arch/Esp32/Hal/Pwm/: Pwm.hpp
ARK/Arch/Esp32/Hal/Spi/: Spi.hpp
ARK/Arch/Esp32/Hal/Time/: Time.cpp  Time.hpp
ARK/Arch/Esp32/Hal/Uart/: Uart.hpp
ARK/Arch/Esp32/Hal/Watchdog/: Watchdog.hpp
ARK/Arch/Pico/: Entry.cpp  PinMap.hpp
ARK/Arch/Pico/Hal/Adc/: Adc.hpp
ARK/Arch/Pico/Hal/Clock/: Clock.cpp  Clock.hpp
ARK/Arch/Pico/Hal/Console/: Console.cpp  Console.hpp
ARK/Arch/Pico/Hal/Flash/: Flash.cpp  Flash.hpp
ARK/Arch/Pico/Hal/Gpio/: Gpio.hpp
ARK/Arch/Pico/Hal/I2c/: I2c.hpp
ARK/Arch/Pico/Hal/Pwm/: Pwm.hpp
ARK/Arch/Pico/Hal/Spi/: Spi.hpp
ARK/Arch/Pico/Hal/Time/: Time.cpp  Time.hpp
ARK/Arch/Pico/Hal/Uart/: Uart.hpp
ARK/Arch/Pico/Hal/Watchdog/: Watchdog.hpp
ARK/Arch/SIL/: Entry.cpp  PinMap.hpp
ARK/Arch/SIL/Hal/Adc/: Adc.cpp  Adc.hpp
ARK/Arch/SIL/Hal/Clock/: Clock.cpp  Clock.hpp
ARK/Arch/SIL/Hal/Console/: Console.cpp  Console.hpp
ARK/Arch/SIL/Hal/Flash/: Flash.cpp  Flash.hpp
ARK/Arch/SIL/Hal/Gpio/: Gpio.cpp  Gpio.hpp
ARK/Arch/SIL/Hal/I2c/: I2c.cpp  I2c.hpp
ARK/Arch/SIL/Hal/Pwm/: Pwm.cpp  Pwm.hpp
ARK/Arch/SIL/Hal/Spi/: Spi.cpp  Spi.hpp
ARK/Arch/SIL/Hal/Time/: Time.cpp  Time.hpp
ARK/Arch/SIL/Hal/Uart/: Uart.cpp  Uart.hpp
ARK/Arch/SIL/Hal/Watchdog/: Watchdog.cpp  Watchdog.hpp
ARK/HAL/Adc/: Adc.hpp
ARK/HAL/Clock/: Clock.hpp
ARK/HAL/Console/: Console.hpp
ARK/HAL/Flash/: Flash.hpp
ARK/HAL/Gpio/: Gpio.hpp
ARK/HAL/I2c/: I2c.hpp
ARK/HAL/Pwm/: Pwm.hpp
ARK/HAL/Spi/: Spi.hpp
ARK/HAL/Time/: Time.hpp
ARK/HAL/Uart/: Uart.hpp
ARK/HAL/Watchdog/: Watchdog.hpp
ARK/Kernel/Loops/: SuperiorLoop.cpp  SuperiorLoop.hpp
ARK/Kernel/MicroKernels/ModulesKernel/: ModulesKernel.cpp  ModulesKernel.hpp
ARK/Kernel/MicroKernels/SystemKernel/: SystemKernel.cpp  SystemKernel.hpp
ARK/Kernel/MicroKernels/UserKernel/: UserKernel.cpp  UserKernel.hpp
ARK/Kernel/StateMachine/: States.cpp  States.hpp
ARK/System/Clock/: Clock.cpp
ARK/System/CommunicationProtocols/Gpio/: Gpio.cpp  Gpio.hpp
ARK/System/CommunicationProtocols/I2c/: I2c.cpp  I2c.hpp
ARK/System/CommunicationProtocols/Spi/: Spi.cpp  Spi.hpp
ARK/System/CommunicationProtocols/Uart/: Uart.cpp  Uart.hpp
ARK/System/Console/: Console.cpp
ARK/System/FDIR/: FDIR.cpp  FDIR.hpp
ARK/System/Peripherals/Adc/: Adc.cpp  Adc.hpp
ARK/System/Peripherals/Pwm/: Pwm.cpp  Pwm.hpp
ARK/System/Power/: Power.cpp  Power.hpp
ARK/System/Storage/: Storage.cpp
ARK/System/Time/: Time.cpp
ARK/System/Watchdog/: Watchdog.cpp
ARK/UserAPI/: UserCode.hpp  UserTransitions.hpp
Docs/: 03-build-and-run.md
Documentation/: 01-overview.md  02-architecture.md  03-build-and-run.md  04-user-guide.md  05-use-case-flight.md  06-states-reference.md  GettingStarted.md  Protocols.md  README.md
Documentation/Web/: index.html  style.css
Modules/: ModulesManager.cpp  ModulesManager.hpp
Modules/WS2812/: WS2812.cpp  WS2812.hpp
Tools/: Build.py  GenerateConfig.py  SetupEnv.py  Upload.py  build.sh  verify.py
User/: UserCode.cpp  UserTransitions.cpp
main/: CMakeLists.txt
