idf_component_register(SRCS 
    "../ARK/Ark.cpp"
    "../ARK/Kernel/Loops/SuperiorLoop.cpp"
    "../ARK/Kernel/StateMachine/States.cpp"
    "../ARK/Kernel/MicroKernels/ModulesKernel/ModulesKernel.cpp"
    "../ARK/Kernel/MicroKernels/SystemKernel/SystemKernel.cpp"
    "../ARK/Kernel/MicroKernels/UserKernel/UserKernel.cpp"
    "../ARK/System/FDIR/FDIR.cpp"
    "../ARK/System/Storage/Storage.cpp"
    "../ARK/System/Console/Console.cpp"
    "../ARK/System/Time/Time.cpp"
    "../ARK/System/Clock/Clock.cpp"
    "../ARK/System/Power/Power.cpp"
    "../ARK/System/CommunicationProtocols/Gpio/Gpio.cpp"
    "../ARK/System/CommunicationProtocols/I2c/I2c.cpp"
    "../ARK/System/CommunicationProtocols/Spi/Spi.cpp"
    "../ARK/System/CommunicationProtocols/Uart/Uart.cpp"
    "../Modules/ModulesManager.cpp"
    # WS2812 is Pico only for now
    
    "../User/UserCode.cpp"
    "../User/UserTransitions.cpp"
    "../ARK/Arch/Esp32/Entry.cpp" 
    "../ARK/Arch/Esp32/Hal/Clock/Clock.cpp" 
    "../ARK/Arch/Esp32/Hal/Console/Console.cpp" 
    "../ARK/Arch/Esp32/Hal/Flash/Flash.cpp" 
    "../ARK/Arch/Esp32/Hal/Time/Time.cpp"
    
    INCLUDE_DIRS 
    ".." 
    "../ARK" 
    "../ARK/HAL" 
    "../ARK/Arch/Esp32/Hal" 
    "../ARK/Arch/Esp32/Hal/Time" 
    "../ARK/Arch/Esp32/Hal/Clock" 
    "../ARK/Arch/Esp32/Hal/Console" 
    "../ARK/Arch/Esp32/Hal/Flash"
    "../Modules" 
    "../User"
    "../ARK/Kernel/Loops" 
    "../ARK/Kernel/StateMachine"
    "../ARK/Kernel/MicroKernels/ModulesKernel"
    "../ARK/Kernel/MicroKernels/SystemKernel"
    "../ARK/Kernel/MicroKernels/UserKernel"
    "../ARK/System/CommunicationProtocols/Gpio"
    "../ARK/System/CommunicationProtocols/I2c"
    "../ARK/System/CommunicationProtocols/Spi"
    "../ARK/System/CommunicationProtocols/Uart"
    "../ARK/System/Power"
    "../ARK/System/FDIR"
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC ARK_ARCH_ESP32)
